syntax = "proto3";

service Hermes {
    rpc KeepAlive (Message) returns (Response);
    rpc NewMessage (Message) returns (Response);
    rpc Deliverd (Message) returns (Response);
    rpc CreateSession (CreateSessionRequest) returns (Response);
    rpc DestroySession(DestroySessionRequest) returns (Response);
    rpc Join(Message) returns(Response);
    rpc Read(Message) returns(Response);
}
message DestroySessionRequest {
    string SessionId = 1;
}

message Message {
    string messageType = 1;
    string from = 2;
    string channel = 3;
    string to = 4;
    string body = 5;
}

message CreateSessionRequest {
    string ClientType = 1;
    string UserID = 2;
	string UserIP = 3;
	string UserAgent = 4;
	string ClientVersion = 5;
	string Node = 6;
}


message Response {
    string code = 1;
    string error = 2;
}
message UserDiscoveryEvent {
    string UserID = 1;
    string ChannelID = 2;
}